# Synthesizer

./: CMakeLists.txt  README.md
src/: input.c  main.c  main.cpp
